# push-in-place

./: Cargo.toml  README.md
examples/: example1.rs
src/: lib.rs
